[package]
name = "tork-governance"
version = "0.2.1"
edition = "2021"
authors = ["Tork Network <developers@tork.network>"]
description = "On-device AI governance SDK - PII detection, redaction, and cryptographic receipts"
license = "MIT"
repository = "https://github.com/torkjacobs/tork-rust-sdk"
homepage = "https://torknetwork.com"
documentation = "https://docs.tork.network"
readme = "README.md"
keywords = ["ai", "governance", "pii", "security", "redaction"]
categories = ["web-programming", "authentication"]

[dependencies]
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "tork_governance"
path = "src/lib.rs"
